[metadata]
name = example-package-YOUR-USERNAME-HERE
version = 0.0.1
author = Ilaria Marini
author_email = ilaria.marini@inaf.it
description = Package to compute/read ICL and BCG particles in simulation and block to snapshot.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/marinilaria/
project_urls =
    Bug Tracker = https://github.com/marinilaria
    classifiers =
        Programming Language :: Python :: 3
	License :: OSI Approved :: MIT License
	Operating System :: OS Independent

[options]
package_dir =
    = src
    packages = find:
    python_requires = >=3.6

[options.packages.find]
where = src
